# McSAS3GUI

./: .copier-answers.yml  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  authors.html  changelog.html  contributing.html  genindex.html  index.html  installation.html  mcsas3_cli_histogrammer.py  mcsas3_cli_runner.py  objects.inv  output.json  output.txt  py-modindex.html  pyproject.toml  readme.html  requirements.txt  search.html  searchindex.js  usage.html
.github/workflows/: ci-cd.yml  coverage.yml  docs.yml  release.yml  tests.yml
_modules/: index.html
ci/: requirements_ubuntu.txt
coverage-report/: cov.json  index.html
coverage-report/20250813_15121e8f5d/: class_index.html  function_index.html  index.html  z_54df999fd6a3c283___init___py.html  z_54df999fd6a3c283_data_loading_tab_py.html  z_54df999fd6a3c283_file_line_selection_widget_py.html  z_54df999fd6a3c283_file_selection_widget_py.html  z_54df999fd6a3c283_getting_started_tab_py.html  z_54df999fd6a3c283_hist_run_tab_py.html  z_54df999fd6a3c283_hist_settings_tab_py.html  z_54df999fd6a3c283_main_window_py.html  z_54df999fd6a3c283_optimization_tab_py.html  z_54df999fd6a3c283_run_settings_tab_py.html  z_54df999fd6a3c283_yaml_editor_widget_py.html  z_a44f0ac069e85531_test_mcsas3gui_py.html  z_e6f7f151129b9790___init___py.html  z_e6f7f151129b9790_base_worker_py.html  z_e6f7f151129b9790_file_utils_py.html  z_e6f7f151129b9790_logging_config_py.html  z_e6f7f151129b9790_task_runner_mixin_py.html  z_e6f7f151129b9790_yaml_syntax_highlighter_py.html  z_e6f7f151129b9790_yaml_utils_py.html  z_f2ca28eaaa7fa313___init___py.html  z_f2ca28eaaa7fa313___main___py.html
coverage-report/20250813_3be1d6e9a7/: class_index.html  function_index.html  index.html  status.json  z_54df999fd6a3c283___init___py.html  z_54df999fd6a3c283_data_loading_tab_py.html  z_54df999fd6a3c283_file_line_selection_widget_py.html  z_54df999fd6a3c283_file_selection_widget_py.html  z_54df999fd6a3c283_getting_started_tab_py.html  z_54df999fd6a3c283_hist_run_tab_py.html  z_54df999fd6a3c283_hist_settings_tab_py.html  z_54df999fd6a3c283_main_window_py.html  z_54df999fd6a3c283_optimization_tab_py.html  z_54df999fd6a3c283_run_settings_tab_py.html  z_54df999fd6a3c283_yaml_editor_widget_py.html  z_a44f0ac069e85531_test_mcsas3gui_py.html  z_e6f7f151129b9790___init___py.html  z_e6f7f151129b9790_base_worker_py.html  z_e6f7f151129b9790_file_utils_py.html  z_e6f7f151129b9790_logging_config_py.html  z_e6f7f151129b9790_task_runner_mixin_py.html  z_e6f7f151129b9790_yaml_syntax_highlighter_py.html  z_e6f7f151129b9790_yaml_utils_py.html  z_f2ca28eaaa7fa313___init___py.html  z_f2ca28eaaa7fa313___main___py.html
coverage-report/20250813_505c64aa07/: class_index.html  function_index.html  index.html  z_54df999fd6a3c283___init___py.html  z_54df999fd6a3c283_data_loading_tab_py.html  (+19 more)
docs/: conf.py
prefab_configurations/: advanced_nexus_demo.yaml  getting_started.yaml  quick_start_demo.yaml  round_robin_dataset_1.yaml  round_robin_dataset_3.yaml
reference/: index.html
run_configurations/: run_config_sphere_at_hardsphere.yaml  run_config_spheres.yaml  run_config_spheres_auto.yaml
src/: main.py
testdata/: merged_AutoMOFs_7_L011.nxs
(+231 files in other folders)
