[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.package-data]
"mcsas3gui" = ["*.ui", "*.qrc", "icons/*", "resources/*"]

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["mcsas3gui"]

[project]
name = "McSAS3GUI"
version = "0.1.1"
description = "Graphical User Interface for McSAS3"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [{name = "Brian R. Pauw", email = "brian.pauw@bam.de"}]
requires-python = ">=3.11"

dependencies = [
    "PyQt6>=6.7.1",
    "numpy",
    "scipy",
    "h5py",
    "matplotlib",
    "pyyaml",
    "attrs",
    "sasmodels",
    "pandas",
    "pint",
    "mcsas3@git+https://github.com/BAMresearch/McSAS3.git",
]

[project.urls]
Homepage = "https://github.com/BAMresearch/McSAS3GUI"
Issues = "https://github.com/BAMresearch/McSAS3GUI/issues"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "black>=24.0",
  "flake8>=6.0"
]
pyinstaller = ["pyinstaller>=5.10"]

[project.scripts]
mcsas3gui = "mcsas3gui.main:main"
m3gui = "mcsas3gui.main:main"




[tool.pyinstaller]
# Custom PyInstaller settings
main = "src/main.py"  # assuming your GUI launcher is 'src/main.py'
name = "McSAS3GUI"
onefile = false      # false = directory bundle; set to true if you want a single executable
windowed = true      # no console window
datas = []
hiddenimports = ["PyQt6.sip"]

[tool.pyinstaller.hooks]
# Hooks to ensure PyInstaller packages all needed Qt plugins
additional-hooks-dir = ["pyinstaller-hooks"]